# xqd

./: .cproject  .gitignore  .project  AUTHORS  DESIGN  NOTES  dbxmld.c  fdwatch.c  fdwatch.h  index.html  libhttpd.c  libhttpd.h  mime_encodings.txt  mmc.c  mmc.h  tdate_parse.c  tdate_parse.h  timers.c  timers.h  version.h  xdbms.c  xm_get.c
contrib/: Boost C++ Libraries.webloc  Boost.Asio 2.webloc  The Hoard Memory Allocator.webloc  Toward.Boost.STM.webloc
docs/: DESIGN  TODO  XDBMS.txt
legal/: LICENSE.acme  libevent
licenses/: html5-boilerplate.txt  memcachedb.txt  oracle-dbxml.txt
proto/: json.c  rest.c
scripts/: 500.dbxmld-rotate  500.xdbms-rotate  dbxmld.sh  dbxmld_wrapper  xdbms.sh
sites/api/: NOTES  index.html  jquery.ba-url.js
sites/api/stylesheets/: main.css
src/: bdb.cpp  bdb.hpp  config.h  configure.ac  file_handler.cpp  file_handler.hpp  header.hpp  lease.cpp  main.cpp  mime_types.cpp  mime_types.hpp  posi_main.cpp  query_handler.cpp  reply.cpp  reply.hpp  request.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  unyield.hpp  xdb.cpp  xdb.hpp  xq_handler.cpp  xq_handler.hpp
src/openssl/: build.sh
